--- a/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
+++ b/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
@@ -23,67 +23,49 @@
    ]
   },
   {
+   "source": [
+    "### 3.1: Se trata de informações cartográficas de uma área 30 x 30 metros de cobertura floresta localizados na Floresta Nacional Roosevelt, no norte do Colorado. \n",
+    "### 3.2: A data da disponibilização dos dados é de: 01/08/1998\n",
+    "### 3.3: Jock A. Blackard, Dr. Denis J. Dean e Dr. Charles W. Anderson."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Reservado para a importação de bibliotecas\n"
+    "## Reservado para a importação de bibliotecas\n",
+    "import pandas as pd\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Manipulando a base de dados\n",
-    "\n",
     "1. Abra a base de dados com o pandas\n",
     "2. Imprima os 10 primeiros exemplos pertencentes à esta base\n",
     "3. Imprima os 10 últimos exemplos pertencentes à esta base\n",
     "4. Quantos exemplos esta base de dados possui?\n",
     "5. Quais são os atributos que a base de dados possui e quais seus tipos?\n",
     "6. Há algum dado faltante na base?\n",
-    "7. De acordo com a documentação da base de dados, qual o significado dos atributos do tipo \"Soil Type\"?  \n",
-    "  7.1 Este atributo é quantitativo ou qualitativo?  \n",
-    "  7.2 Qual o tipo de codificação utilizada para denotar este atributo? Consulte a seguinte referência:  \n",
-    "  * https://pbpython.com/categorical-encoding.html"
+    "7. De acordo com a documentação da base de dados, qual o significado dos atributos do tipo \"Soil Type\"?\n",
+    "    7.1. Este atributo é quantitativo ou qualitativo?\n",
+    "    7.2. Qual o tipo de codificação utilizada para denotar este atributo? Consulte a seguinte referência:\n",
+    "    https://pbpython.com/categorical-encoding.html"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('dataset/covtype.csv', sep=';', low_memory=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -152,9 +134,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.1 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1602266691412"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
