Update PP3.2 - Conhecendo o Conjunto de Dados.ipynb

--- a/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
+++ b/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
@@ -38,7 +38,8 @@
    "outputs": [],
    "source": [
     "## Reservado para a importação de bibliotecas\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -69,9 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "10 primeiros exemplos:\n"
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -79,10 +87,11 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Elevation</th>\n      <th>Aspect</th>\n      <th>Slope</th>\n      <th>Horizontal_Distance_To_Hydrology</th>\n      <th>Vertical_Distance_To_Hydrology</th>\n      <th>Horizontal_Distance_To_Roadways</th>\n      <th>Hillshade_9am</th>\n      <th>Hillshade_Noon</th>\n      <th>Hillshade_3pm</th>\n      <th>Horizontal_Distance_To_Fire_Points</th>\n      <th>...</th>\n      <th>Soil_Type32</th>\n      <th>Soil_Type33</th>\n      <th>Soil_Type34</th>\n      <th>Soil_Type35</th>\n      <th>Soil_Type36</th>\n      <th>Soil_Type37</th>\n      <th>Soil_Type38</th>\n      <th>Soil_Type39</th>\n      <th>Soil_Type40</th>\n      <th>Cover_Type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2596</td>\n      <td>51</td>\n      <td>3</td>\n      <td>258</td>\n      <td>0</td>\n      <td>510</td>\n      <td>221</td>\n      <td>232</td>\n      <td>148</td>\n      <td>6279</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2590</td>\n      <td>56</td>\n      <td>2</td>\n      <td>212</td>\n      <td>-6</td>\n      <td>390</td>\n      <td>220</td>\n      <td>235</td>\n      <td>151</td>\n      <td>6225</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2804</td>\n      <td>139</td>\n      <td>9</td>\n      <td>268</td>\n      <td>65</td>\n      <td>3180</td>\n      <td>234</td>\n      <td>238</td>\n      <td>135</td>\n      <td>6121</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2785</td>\n      <td>155</td>\n      <td>18</td>\n      <td>242</td>\n      <td>118</td>\n      <td>3090</td>\n      <td>238</td>\n      <td>238</td>\n      <td>122</td>\n      <td>6211</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2595</td>\n      <td>45</td>\n      <td>2</td>\n      <td>153</td>\n      <td>-1</td>\n      <td>391</td>\n      <td>220</td>\n      <td>234</td>\n      <td>150</td>\n      <td>6172</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2579</td>\n      <td>132</td>\n      <td>6</td>\n      <td>300</td>\n      <td>-15</td>\n      <td>67</td>\n      <td>230</td>\n      <td>237</td>\n      <td>140</td>\n      <td>6031</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2606</td>\n      <td>45</td>\n      <td>7</td>\n      <td>270</td>\n      <td>5</td>\n      <td>633</td>\n      <td>222</td>\n      <td>225</td>\n      <td>138</td>\n      <td>6256</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2605</td>\n      <td>49</td>\n      <td>4</td>\n      <td>234</td>\n      <td>7</td>\n      <td>573</td>\n      <td>222</td>\n      <td>230</td>\n      <td>144</td>\n      <td>6228</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2617</td>\n      <td>45</td>\n      <td>9</td>\n      <td>240</td>\n      <td>56</td>\n      <td>666</td>\n      <td>223</td>\n      <td>221</td>\n      <td>133</td>\n      <td>6244</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2612</td>\n      <td>59</td>\n      <td>10</td>\n      <td>247</td>\n      <td>11</td>\n      <td>636</td>\n      <td>228</td>\n      <td>219</td>\n      <td>124</td>\n      <td>6230</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>10 rows × 55 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 6
     }
    ],
    "source": [
+    "print('10 primeiros exemplos:')\n",
     "df.head(10)"
    ]
   },
@@ -102,7 +111,45 @@
     }
    ],
    "source": [
+    "print('10 últimos exemplos:')\n",
     "df.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Existem 581012 exemplos nessa base de dados.\n"
+    }
+   ],
+   "source": [
+    "print('Existem {} exemplos nessa base de dados.' .format(df.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "A base possui os seguintes atributos:\nElevation\nAspect\nSlope\nHorizontal_Distance_To_Hydrology\nVertical_Distance_To_Hydrology\nHorizontal_Distance_To_Roadways\nHillshade_9am\nHillshade_Noon\nHillshade_3pm\nHorizontal_Distance_To_Fire_Points\nWilderness_Area1\nWilderness_Area2\nWilderness_Area3\nWilderness_Area4\nSoil_Type1\nSoil_Type2\nSoil_Type3\nSoil_Type4\nSoil_Type5\nSoil_Type6\nSoil_Type7\nSoil_Type8\nSoil_Type9\nSoil_Type10\nSoil_Type11\nSoil_Type12\nSoil_Type13\nSoil_Type14\nSoil_Type15\nSoil_Type16\nSoil_Type17\nSoil_Type18\nSoil_Type19\nSoil_Type20\nSoil_Type21\nSoil_Type22\nSoil_Type23\nSoil_Type24\nSoil_Type25\nSoil_Type26\nSoil_Type27\nSoil_Type28\nSoil_Type29\nSoil_Type30\nSoil_Type31\nSoil_Type32\nSoil_Type33\nSoil_Type34\nSoil_Type35\nSoil_Type36\nSoil_Type37\nSoil_Type38\nSoil_Type39\nSoil_Type40\nCover_Type\n"
+    }
+   ],
+   "source": [
+    "print('A base possui os seguintes atributos:')\n",
+    "df_columns = df.columns.to_numpy()\n",
+    "for i in df_columns:\n",
+    "    print(i)"
    ]
   },
   {
