--- a/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
+++ b/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Reservado para a importação de bibliotecas\n",
+    "# Reservado para a importação de bibliotecas\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -878,73 +878,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 581012 entries, 0 to 581011\n",
-      "Data columns (total 55 columns):\n",
-      " #   Column                              Non-Null Count   Dtype\n",
-      "---  ------                              --------------   -----\n",
-      " 0   Elevation                           581012 non-null  int64\n",
-      " 1   Aspect                              581012 non-null  int64\n",
-      " 2   Slope                               581012 non-null  int64\n",
-      " 3   Horizontal_Distance_To_Hydrology    581012 non-null  int64\n",
-      " 4   Vertical_Distance_To_Hydrology      581012 non-null  int64\n",
-      " 5   Horizontal_Distance_To_Roadways     581012 non-null  int64\n",
-      " 6   Hillshade_9am                       581012 non-null  int64\n",
-      " 7   Hillshade_Noon                      581012 non-null  int64\n",
-      " 8   Hillshade_3pm                       581012 non-null  int64\n",
-      " 9   Horizontal_Distance_To_Fire_Points  581012 non-null  int64\n",
-      " 10  Wilderness_Area1                    581012 non-null  int64\n",
-      " 11  Wilderness_Area2                    581012 non-null  int64\n",
-      " 12  Wilderness_Area3                    581012 non-null  int64\n",
-      " 13  Wilderness_Area4                    581012 non-null  int64\n",
-      " 14  Soil_Type1                          581012 non-null  int64\n",
-      " 15  Soil_Type2                          581012 non-null  int64\n",
-      " 16  Soil_Type3                          581012 non-null  int64\n",
-      " 17  Soil_Type4                          581012 non-null  int64\n",
-      " 18  Soil_Type5                          581012 non-null  int64\n",
-      " 19  Soil_Type6                          581012 non-null  int64\n",
-      " 20  Soil_Type7                          581012 non-null  int64\n",
-      " 21  Soil_Type8                          581012 non-null  int64\n",
-      " 22  Soil_Type9                          581012 non-null  int64\n",
-      " 23  Soil_Type10                         581012 non-null  int64\n",
-      " 24  Soil_Type11                         581012 non-null  int64\n",
-      " 25  Soil_Type12                         581012 non-null  int64\n",
-      " 26  Soil_Type13                         581012 non-null  int64\n",
-      " 27  Soil_Type14                         581012 non-null  int64\n",
-      " 28  Soil_Type15                         581012 non-null  int64\n",
-      " 29  Soil_Type16                         581012 non-null  int64\n",
-      " 30  Soil_Type17                         581012 non-null  int64\n",
-      " 31  Soil_Type18                         581012 non-null  int64\n",
-      " 32  Soil_Type19                         581012 non-null  int64\n",
-      " 33  Soil_Type20                         581012 non-null  int64\n",
-      " 34  Soil_Type21                         581012 non-null  int64\n",
-      " 35  Soil_Type22                         581012 non-null  int64\n",
-      " 36  Soil_Type23                         581012 non-null  int64\n",
-      " 37  Soil_Type24                         581012 non-null  int64\n",
-      " 38  Soil_Type25                         581012 non-null  int64\n",
-      " 39  Soil_Type26                         581012 non-null  int64\n",
-      " 40  Soil_Type27                         581012 non-null  int64\n",
-      " 41  Soil_Type28                         581012 non-null  int64\n",
-      " 42  Soil_Type29                         581012 non-null  int64\n",
-      " 43  Soil_Type30                         581012 non-null  int64\n",
-      " 44  Soil_Type31                         581012 non-null  int64\n",
-      " 45  Soil_Type32                         581012 non-null  int64\n",
-      " 46  Soil_Type33                         581012 non-null  int64\n",
-      " 47  Soil_Type34                         581012 non-null  int64\n",
-      " 48  Soil_Type35                         581012 non-null  int64\n",
-      " 49  Soil_Type36                         581012 non-null  int64\n",
-      " 50  Soil_Type37                         581012 non-null  int64\n",
-      " 51  Soil_Type38                         581012 non-null  int64\n",
-      " 52  Soil_Type39                         581012 non-null  int64\n",
-      " 53  Soil_Type40                         581012 non-null  int64\n",
-      " 54  Cover_Type                          581012 non-null  int64\n",
-      "dtypes: int64(55)\n",
-      "memory usage: 243.8 MB\n"
+      "De acordo com o artigo anexado, os atributos de Wilderness_Area e Soil_Type foram subdivididos em múltiplas colunas \n",
+      "de valores binários, por isso iremos remover suas categorizações para melhor visualização:\n",
+      "\n",
+      "Elevation                             int64\n",
+      "Aspect                                int64\n",
+      "Slope                                 int64\n",
+      "Horizontal_Distance_To_Hydrology      int64\n",
+      "Vertical_Distance_To_Hydrology        int64\n",
+      "Horizontal_Distance_To_Roadways       int64\n",
+      "Hillshade_9am                         int64\n",
+      "Hillshade_Noon                        int64\n",
+      "Hillshade_3pm                         int64\n",
+      "Horizontal_Distance_To_Fire_Points    int64\n",
+      "Cover_Type                            int64\n",
+      "dtype: object\n",
+      "\n",
+      "Além desses, temos, como dito anteriormente, os atributos de Wilderness_Area e Soil_Type com respectivamente \n",
+      "4 e 40 valores binários, resultando em um total de 13 atributos\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "print('De acordo com o artigo anexado, os atributos de Wilderness_Area e Soil_Type foram subdivididos em múltiplas colunas \\nde valores binários, por isso iremos remover suas categorizações para melhor visualização:\\n')\n",
+    "\n",
+    "columns_to_remove = []\n",
+    "columns_array = df.columns\n",
+    "df_attributes = df\n",
+    "\n",
+    "for column in columns_array:\n",
+    "    if \"Wilderness_Area\" in column:\n",
+    "        columns_to_remove.append(column)\n",
+    "    elif \"Soil_Type\" in column:\n",
+    "        columns_to_remove.append(column)\n",
+    "\n",
+    "df_attributes.drop(columns_to_remove, inplace=True, axis=1)\n",
+    "print(df_attributes.dtypes)\n",
+    "\n",
+    "print('\\nAlém desses, temos, como dito anteriormente, os atributos de Wilderness_Area e Soil_Type com respectivamente \\n4 e 40 valores binários, resultando em um total de', df_attributes.shape[1] + 2, 'atributos')"
    ]
   },
   {
@@ -956,78 +927,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Veremos a seguir a quantidade de nulos por atributo:\n"
+      "Nenhum dos atributos possui valores nulos\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Elevation                             0\n",
-       "Aspect                                0\n",
-       "Slope                                 0\n",
-       "Horizontal_Distance_To_Hydrology      0\n",
-       "Vertical_Distance_To_Hydrology        0\n",
-       "Horizontal_Distance_To_Roadways       0\n",
-       "Hillshade_9am                         0\n",
-       "Hillshade_Noon                        0\n",
-       "Hillshade_3pm                         0\n",
-       "Horizontal_Distance_To_Fire_Points    0\n",
-       "Wilderness_Area1                      0\n",
-       "Wilderness_Area2                      0\n",
-       "Wilderness_Area3                      0\n",
-       "Wilderness_Area4                      0\n",
-       "Soil_Type1                            0\n",
-       "Soil_Type2                            0\n",
-       "Soil_Type3                            0\n",
-       "Soil_Type4                            0\n",
-       "Soil_Type5                            0\n",
-       "Soil_Type6                            0\n",
-       "Soil_Type7                            0\n",
-       "Soil_Type8                            0\n",
-       "Soil_Type9                            0\n",
-       "Soil_Type10                           0\n",
-       "Soil_Type11                           0\n",
-       "Soil_Type12                           0\n",
-       "Soil_Type13                           0\n",
-       "Soil_Type14                           0\n",
-       "Soil_Type15                           0\n",
-       "Soil_Type16                           0\n",
-       "Soil_Type17                           0\n",
-       "Soil_Type18                           0\n",
-       "Soil_Type19                           0\n",
-       "Soil_Type20                           0\n",
-       "Soil_Type21                           0\n",
-       "Soil_Type22                           0\n",
-       "Soil_Type23                           0\n",
-       "Soil_Type24                           0\n",
-       "Soil_Type25                           0\n",
-       "Soil_Type26                           0\n",
-       "Soil_Type27                           0\n",
-       "Soil_Type28                           0\n",
-       "Soil_Type29                           0\n",
-       "Soil_Type30                           0\n",
-       "Soil_Type31                           0\n",
-       "Soil_Type32                           0\n",
-       "Soil_Type33                           0\n",
-       "Soil_Type34                           0\n",
-       "Soil_Type35                           0\n",
-       "Soil_Type36                           0\n",
-       "Soil_Type37                           0\n",
-       "Soil_Type38                           0\n",
-       "Soil_Type39                           0\n",
-       "Soil_Type40                           0\n",
-       "Cover_Type                            0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Veremos a seguir a quantidade de nulos por atributo:')\n",
-    "df.isnull().sum()"
+    "df_columns = df.columns\n",
+    "count = 0\n",
+    "\n",
+    "for column in df_columns:\n",
+    "    null_total = (df[column]).isnull().sum()\n",
+    "    \n",
+    "    if(null_total > 0):\n",
+    "        print('O atributo', column, 'possui', null_total, 'valores nulos')\n",
+    "        count += 1\n",
+    "\n",
+    "if(count == 0):\n",
+    "    print('Nenhum dos atributos possui valores nulos')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O atributo Soil_Type foi dividido em múltiplos valores binários, resultando em quarenta variáveis designadoras \n",
+      "Sendo 0 a representação de ausência e 1 a de presença para uma área específica de deserto ou tipo de solo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('O atributo Soil_Type foi dividido em múltiplos valores binários, resultando em quarenta variáveis designadoras \\nSendo 0 a representação de ausência e 1 a de presença para uma área específica de deserto ou tipo de solo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visto que Soil_Type possui uma representação binária para descrever as características encontradas nas amostras, \n",
+      "ele pode ser considerado um atributo qualitativo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Visto que Soil_Type possui uma representação binária para descrever as características encontradas nas amostras, \\nele pode ser considerado um atributo qualitativo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Foi utilizada a codificação binária, que é basicamente o uso da estrutura de criação de colunas com valores binários \n",
+      "para uso de categorização\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Foi utilizada a codificação binária, que é basicamente o uso da estrutura de criação de colunas com valores binários \\npara uso de categorização')"
    ]
   },
   {
