Visualizando a base de dados - Q1 WIP

--- a/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
+++ b/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
@@ -41,7 +41,11 @@
    "source": [
     "# Reservado para a importação de bibliotecas\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from beautifultable import BeautifulTable\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -895,7 +899,7 @@
       "dtype: object\n",
       "\n",
       "Além desses, temos, como dito anteriormente, os atributos de Wilderness_Area e Soil_Type com respectivamente \n",
-      "4 e 40 valores binários, resultando em um total de 13 atributos\n"
+      "4 e 40 colunas de valores binários, resultando em um total de 13 atributos e 55 colunas\n"
      ]
     }
    ],
@@ -903,8 +907,8 @@
     "print('De acordo com o artigo anexado, os atributos de Wilderness_Area e Soil_Type foram subdivididos em múltiplas colunas \\nde valores binários, por isso iremos remover suas categorizações para melhor visualização:\\n')\n",
     "\n",
     "columns_to_remove = []\n",
-    "columns_array = df.columns\n",
-    "df_attributes = df\n",
+    "df_attributes = pd.read_csv('dataset/covtype.csv', sep=',')\n",
+    "columns_array = df_attributes.columns\n",
     "\n",
     "for column in columns_array:\n",
     "    if \"Wilderness_Area\" in column:\n",
@@ -915,7 +919,7 @@
     "df_attributes.drop(columns_to_remove, inplace=True, axis=1)\n",
     "print(df_attributes.dtypes)\n",
     "\n",
-    "print('\\nAlém desses, temos, como dito anteriormente, os atributos de Wilderness_Area e Soil_Type com respectivamente \\n4 e 40 valores binários, resultando em um total de', df_attributes.shape[1] + 2, 'atributos')"
+    "print('\\nAlém desses, temos, como dito anteriormente, os atributos de Wilderness_Area e Soil_Type com respectivamente \\n4 e 40 colunas de valores binários, resultando em um total de', df_attributes.shape[1] + 2, 'atributos e', len(df.columns), 'colunas')"
    ]
   },
   {
@@ -974,24 +978,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_chart(attribute):\n",
+    "    mean = df[attribute].mean()\n",
+    "    median = df[attribute].median()\n",
+    "    axis_x = df[attribute]\n",
+    "    \n",
+    "    ax = sns.displot(x = axis_x, height = 4, aspect = 4, kde = False)\n",
+    "    plt.axvline(mean, color = 'orange')\n",
+    "    plt.axvline(median, color = 'green')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# plot attributes\n",
+    "target_attribute = 'Cover_Type'\n",
+    "df_attributes.drop(target_attribute, inplace=True, axis=1)\n",
+    "\n",
+    "for i in df_attributes:\n",
+    "    generate_chart(i)"
+   ]
   },
   {
    "cell_type": "code",
