Visualizando a base de dados - Q4

--- a/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
+++ b/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4**: Pode-se dizer que há um desbalanceamento, devido ao fato de as classes 1 e 2 estarem em quantidade muito maior"
+    "**4**: Pode-se dizer que há um desbalanceamento, devido ao fato de as classes 1 e 2 estarem em quantidade muito maior, é possível visualizar isso a partir das medidas de tendência central."
    ]
   },
   {
