Visualizando a base de dados - Q6 e Q7

--- a/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
+++ b/notebooks/PP3.2 - Conhecendo o Conjunto de Dados.ipynb
@@ -1165,7 +1165,7 @@
     "\n",
     "**5**: Como o treinamento é realizado a partir de uma base de dados que contém a resposta desejada, essa tarefa é de Aprendizado de Máquina Supervisionado para buscar focos de concentração de árvores\n",
     "\n",
-    "**6.1**: Acurácia, precisão e recall\n",
+    "**6.1**: Acurácia, precisão e F-score\n",
     "\n",
     "**7.2**: F-score"
    ]
