Abrindo a base e excluindo atributos categóricos

--- a/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
+++ b/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
@@ -62,9 +62,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "#Abra a base de dados em questão\n",
+    "df = pd.read_csv('dataset/covtype.csv', sep=',')\n",
+    "#Elimine todas as colunas relativas aos atributos categóricos\n",
+    "df = df.drop(['Wilderness_Area1','Wilderness_Area2','Wilderness_Area3','Wilderness_Area4','Soil_Type1', 'Soil_Type2', 'Soil_Type3', 'Soil_Type4', 'Soil_Type5', 'Soil_Type6', 'Soil_Type7', 'Soil_Type8', 'Soil_Type9', 'Soil_Type10', 'Soil_Type11', 'Soil_Type12', 'Soil_Type13', 'Soil_Type14', 'Soil_Type15', 'Soil_Type16', 'Soil_Type17', 'Soil_Type18', 'Soil_Type19', 'Soil_Type20', 'Soil_Type21', 'Soil_Type22', 'Soil_Type23', 'Soil_Type24', 'Soil_Type25', 'Soil_Type26', 'Soil_Type27', 'Soil_Type28', 'Soil_Type29', 'Soil_Type30', 'Soil_Type31', 'Soil_Type32', 'Soil_Type33', 'Soil_Type34', 'Soil_Type35', 'Soil_Type36', 'Soil_Type37', 'Soil_Type38', 'Soil_Type39', 'Soil_Type40'], axis=1).dropna()\n",
+    "#Armazene o atributo alvo em uma variável y e os atributos preditores em uma variável X\n",
+    "#Efetue uma partição holdout 70/30 com o sklearn, distribuindo os exemplos de maneira aleatória\n",
+    "#Efetue o escalonamento dos atributos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Elevation  Aspect  Slope  Horizontal_Distance_To_Hydrology  \\\n",
+       "0       2596      51      3                               258   \n",
+       "1       2590      56      2                               212   \n",
+       "2       2804     139      9                               268   \n",
+       "3       2785     155     18                               242   \n",
+       "4       2595      45      2                               153   \n",
+       "5       2579     132      6                               300   \n",
+       "6       2606      45      7                               270   \n",
+       "7       2605      49      4                               234   \n",
+       "8       2617      45      9                               240   \n",
+       "9       2612      59     10                               247   \n",
+       "\n",
+       "   Vertical_Distance_To_Hydrology  Horizontal_Distance_To_Roadways  \\\n",
+       "0                               0                              510   \n",
+       "1                              -6                              390   \n",
+       "2                              65                             3180   \n",
+       "3                             118                             3090   \n",
+       "4                              -1                              391   \n",
+       "5                             -15                               67   \n",
+       "6                               5                              633   \n",
+       "7                               7                              573   \n",
+       "8                              56                              666   \n",
+       "9                              11                              636   \n",
+       "\n",
+       "   Hillshade_9am  Hillshade_Noon  Hillshade_3pm  \\\n",
+       "0            221             232            148   \n",
+       "1            220             235            151   \n",
+       "2            234             238            135   \n",
+       "3            238             238            122   \n",
+       "4            220             234            150   \n",
+       "5            230             237            140   \n",
+       "6            222             225            138   \n",
+       "7            222             230            144   \n",
+       "8            223             221            133   \n",
+       "9            228             219            124   \n",
+       "\n",
+       "   Horizontal_Distance_To_Fire_Points  Cover_Type  \n",
+       "0                                6279           5  \n",
+       "1                                6225           5  \n",
+       "2                                6121           2  \n",
+       "3                                6211           2  \n",
+       "4                                6172           5  \n",
+       "5                                6031           2  \n",
+       "6                                6256           5  \n",
+       "7                                6228           5  \n",
+       "8                                6244           5  \n",
+       "9                                6230           5  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Elevation</th>\n      <th>Aspect</th>\n      <th>Slope</th>\n      <th>Horizontal_Distance_To_Hydrology</th>\n      <th>Vertical_Distance_To_Hydrology</th>\n      <th>Horizontal_Distance_To_Roadways</th>\n      <th>Hillshade_9am</th>\n      <th>Hillshade_Noon</th>\n      <th>Hillshade_3pm</th>\n      <th>Horizontal_Distance_To_Fire_Points</th>\n      <th>Cover_Type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2596</td>\n      <td>51</td>\n      <td>3</td>\n      <td>258</td>\n      <td>0</td>\n      <td>510</td>\n      <td>221</td>\n      <td>232</td>\n      <td>148</td>\n      <td>6279</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2590</td>\n      <td>56</td>\n      <td>2</td>\n      <td>212</td>\n      <td>-6</td>\n      <td>390</td>\n      <td>220</td>\n      <td>235</td>\n      <td>151</td>\n      <td>6225</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2804</td>\n      <td>139</td>\n      <td>9</td>\n      <td>268</td>\n      <td>65</td>\n      <td>3180</td>\n      <td>234</td>\n      <td>238</td>\n      <td>135</td>\n      <td>6121</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2785</td>\n      <td>155</td>\n      <td>18</td>\n      <td>242</td>\n      <td>118</td>\n      <td>3090</td>\n      <td>238</td>\n      <td>238</td>\n      <td>122</td>\n      <td>6211</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2595</td>\n      <td>45</td>\n      <td>2</td>\n      <td>153</td>\n      <td>-1</td>\n      <td>391</td>\n      <td>220</td>\n      <td>234</td>\n      <td>150</td>\n      <td>6172</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2579</td>\n      <td>132</td>\n      <td>6</td>\n      <td>300</td>\n      <td>-15</td>\n      <td>67</td>\n      <td>230</td>\n      <td>237</td>\n      <td>140</td>\n      <td>6031</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2606</td>\n      <td>45</td>\n      <td>7</td>\n      <td>270</td>\n      <td>5</td>\n      <td>633</td>\n      <td>222</td>\n      <td>225</td>\n      <td>138</td>\n      <td>6256</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2605</td>\n      <td>49</td>\n      <td>4</td>\n      <td>234</td>\n      <td>7</td>\n      <td>573</td>\n      <td>222</td>\n      <td>230</td>\n      <td>144</td>\n      <td>6228</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2617</td>\n      <td>45</td>\n      <td>9</td>\n      <td>240</td>\n      <td>56</td>\n      <td>666</td>\n      <td>223</td>\n      <td>221</td>\n      <td>133</td>\n      <td>6244</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2612</td>\n      <td>59</td>\n      <td>10</td>\n      <td>247</td>\n      <td>11</td>\n      <td>636</td>\n      <td>228</td>\n      <td>219</td>\n      <td>124</td>\n      <td>6230</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "source": []
   },
   {
@@ -166,9 +241,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "Python 3.8.1 64-bit",
+   "display_name": "Python 3.8.1 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "53f9a72db918e1f0cc3aa0c0bcda5f5313f50e7c22ec95f6292c64615ab9216b"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -180,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
