Testando Redes Neurais sem os Atributos Categórios WIP

--- a/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
+++ b/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,10 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 8. Repita por 100 vezes o treinamento desta mesma rede, mas utilizando o otimizador SGD\n",
+    "# 8.1 Apresente a média e o desvio padrão da acurácia e do F-Score para o conjunto de treino"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9. Houve influência da escolha do otimizador no desempenho da rede?"
+   ]
   },
   {
    "cell_type": "markdown",
