Propondo Novas Arquiteturas WIP

--- a/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
+++ b/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
@@ -320,12 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8. Repita por 100 vezes o treinamento desta mesma rede, mas utilizando o otimizador SGD\n",
     "solver = 'sgd'\n",
+    "accuracy = []\n",
+    "fscore = []\n",
     "\n",
     "for i in range(2):\n",
     "    training()"
@@ -333,15 +335,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: média = 0.7161984234440977 e desvio padrão = 0.0012849918085934004\n",
-      "F-Score: média = 0.4947069626775867 e desvio padrão = 0.024119420017237173\n"
+      "Acurácia: média = 0.6955233385349734 e desvio padrão = 0.0005651046447585628\n",
+      "F-Score: média = 0.4272705926371475 e desvio padrão = 0.0031232546979116094\n"
      ]
     }
    ],
@@ -355,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sim, houve diferença entre eles. Quanto ao tempo de execução, o otimizador Adam teve um melhor resultado, porém o SGD demonstrou um melhor resultado, visto que o seu desvião padrão foi menor."
+    "**9.** Sim, houve diferença entre eles. Quanto ao tempo de execução, o otimizador Adam teve um melhor resultado, porém o SGD demonstrou um melhor resultado."
    ]
   },
   {
@@ -383,10 +385,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Proponha 10 arquiteturas distintas de RNAs para o problema em questão, à sua escolha\n",
+    "architectures = [[1, 10, 'relu', 'sgd', 100], \n",
+    "                [2, 10, 'relu', 'adam', 150],\n",
+    "                [1, 20, 'relu', 'adam', 200],\n",
+    "                [1, 20, 'tanh', 'adam', 100],\n",
+    "                [2, 10, 'tanh', 'sgd', 200],\n",
+    "                [1, 10, 'tanh', 'sgd', 150],\n",
+    "                [2, 20, 'logistic', 'adam', 100],\n",
+    "                [1, 20, 'logistic', 'sgd', 150],\n",
+    "                [2, 10, 'identity', 'adam', 100],\n",
+    "                [2, 20, 'identity', 'sgd', 150]]\n",
+    "\n",
+    "arch_accuracy = []\n",
+    "arch_fscore = []\n",
+    "\n",
+    "# Avalie cada uma das arquiteturas perante todos os hiperparâmetros apresentados por 100 vezes\n",
+    "for i in architectures:\n",
+    "    layer = i[0]\n",
+    "    neuron = i[1]\n",
+    "    final_layer = [neuron] * layer\n",
+    "    activation = i[2]\n",
+    "    solver = i[3]\n",
+    "    max_times = i[4]\n",
+    "    accuracy = []\n",
+    "    fscore = []\n",
+    "    \n",
+    "    for i in range(2):\n",
+    "        training()\n",
+    "        \n",
+    "        arch_accuracy.append(accuracy)\n",
+    "        arch_fscore.append(fscore)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Como resultado da avaliação, apresente:\n",
+    "# 3.1 Top-3 melhores redes no tocante à F-Score e Acurácia\n",
+    "print(arch_accuracy)\n",
+    "\n",
+    "# 3.2 Repetição em que houve o melhor desempenho de cada uma dessas redes: ilustre tp, tf, fp e fn"
+   ]
   },
   {
    "cell_type": "markdown",
