Imprimindo top3 da acuracia e fscore

--- a/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
+++ b/notebooks/PP3.3 - Proposição e Avaliação de RNAs.ipynb
@@ -430,7 +430,8 @@
    "source": [
     "# Como resultado da avaliação, apresente:\n",
     "# 3.1 Top-3 melhores redes no tocante à F-Score e Acurácia\n",
-    "print(arch_accuracy)\n",
+    "print(arch_accuracy.sort_values, ascending=False)\n",
+    "print(arch_fscore.sort_values, ascending=False)\n",
     "\n",
     "# 3.2 Repetição em que houve o melhor desempenho de cada uma dessas redes: ilustre tp, tf, fp e fn"
    ]
