Preparação dos dados

--- a/notebooks/PP3.4 - Validação Cruzada e Busca em Grade.ipynb
+++ b/notebooks/PP3.4 - Validação Cruzada e Busca em Grade.ipynb
@@ -63,24 +63,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reservado para a importação de bibliotecas\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.neural_network import MLPClassifier"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Abrindo a base de dados\n",
+    "df = pd.read_csv('dataset/covtype.csv', sep = ',')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elevation                             int64\n",
+      "Aspect                                int64\n",
+      "Slope                                 int64\n",
+      "Horizontal_Distance_To_Hydrology      int64\n",
+      "Vertical_Distance_To_Hydrology        int64\n",
+      "Horizontal_Distance_To_Roadways       int64\n",
+      "Hillshade_9am                         int64\n",
+      "Hillshade_Noon                        int64\n",
+      "Hillshade_3pm                         int64\n",
+      "Horizontal_Distance_To_Fire_Points    int64\n",
+      "Cover_Type                            int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Eliminando todas as colunas relativas aos atributos categóricos\n",
+    "columns_to_remove = []\n",
+    "df_attributes = pd.read_csv('dataset/covtype.csv', sep=',')\n",
+    "columns_array = df_attributes.columns\n",
+    "\n",
+    "for column in columns_array:\n",
+    "    if \"Wilderness_Area\" in column:\n",
+    "        columns_to_remove.append(column)\n",
+    "    elif \"Soil_Type\" in column:\n",
+    "        columns_to_remove.append(column)\n",
+    "\n",
+    "df_attributes.drop(columns_to_remove, inplace=True, axis=1)\n",
+    "print(df_attributes.dtypes)"
+   ]
   },
   {
    "cell_type": "code",
